--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,116 +8,197 @@
 
 
     <EditText
-        android:id="@+id/title"
+        android:id="@+id/ed_title"
         android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="101dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/gg"
-        android:backgroundTint="#1F2229"
         android:ems="10"
+        android:fontFamily="@font/activist"
         android:hint="Введите название события"
-        android:inputType="date"
+        android:inputType="text"
+        android:paddingLeft="32dp"
+        android:paddingTop="24dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="24dp"
         android:textAlignment="textStart"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textAllCaps="true"
+        android:textColor="@color/base_dark"
+        android:textColorHint="@color/base_dark"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/btn_pick_date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/data" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_pick_date" />
 
     <Button
         android:id="@+id/btn_add"
-        android:layout_width="500dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="50dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginBottom="64dp"
         android:backgroundTint="#1F2229"
+        android:fontFamily="@font/activist"
+        android:paddingLeft="32dp"
+        android:paddingTop="24dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="24dp"
         android:text="Добавить дату"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/url"
+    <Button
+        android:id="@+id/btn_pick_date"
         android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="101dp"
-        android:background="@drawable/gg"
-        android:backgroundTint="#1F2229"
-        android:ems="10"
-        android:hint="  URL Картинки"
-        android:inputType="text"
-        android:textAllCaps="true"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
+        android:backgroundTint="@color/base_dark"
+        android:fontFamily="@font/activist"
+        android:paddingLeft="32dp"
+        android:paddingTop="24dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="24dp"
+        android:text="выбрать дату"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/desc" />
-
-    <EditText
-        android:id="@+id/desc"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="101dp"
-        android:background="@drawable/gg"
-        android:backgroundTint="#1F2229"
-        android:ems="10"
-        android:hint="  Введите описание"
-        android:inputType="text"
-        android:textAllCaps="true"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
-
-    <EditText
-        android:id="@+id/data"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="101dp"
-        android:inputType="date"
-        android:layout_marginTop="270dp"
-        android:layout_marginEnd="101dp"
-        android:background="@drawable/gg"
-        android:backgroundTint="#1F2229"
-        android:ems="10"
-        android:hint="  Введите дату (1.1.2022)"
-        android:textAlignment="textStart"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="250dp"
-        android:layout_height="170dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_height="150dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img" />
 
+    <EditText
+        android:id="@+id/ed_desription"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/gg"
+        android:ems="10"
+        android:fontFamily="@font/activist"
+        android:gravity="start|top"
+        android:hint="Введите описание"
+        android:inputType="textMultiLine"
+        android:maxLines="5"
+        android:paddingLeft="32dp"
+        android:paddingTop="24dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="24dp"
+        android:textColor="@color/base_dark"
+        android:textColorHint="@color/base_dark"
+        android:textSize="24sp"
+        android:typeface="normal"
+        app:layout_constraintEnd_toEndOf="@+id/ed_title"
+        app:layout_constraintStart_toStartOf="@+id/ed_title"
+        app:layout_constraintTop_toBottomOf="@+id/ed_title" />
+
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="416dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="60dp"
-        android:text="Загрузка новых событий"
-        android:textSize="30dp"
+        android:id="@+id/tv_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/gg"
+        android:ems="10"
+        android:fontFamily="@font/activist"
+        android:gravity="center"
+        android:hint="Дата"
+        android:inputType="date"
+        android:paddingLeft="32dp"
+        android:paddingTop="24dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="24dp"
+        android:textColor="@color/base_dark"
+        android:textColorHint="@color/base_dark"
+        android:textSize="24sp"
+        android:typeface="normal"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_pick_date"
+        app:layout_constraintEnd_toStartOf="@+id/btn_pick_date"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btn_pick_date" />
+
+    <Button
+        android:id="@+id/btn_load_img"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/activist"
+        android:paddingLeft="32dp"
+        android:paddingTop="24dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="24dp"
+        android:text="Загрузить изображение"
+        android:textSize="24sp"
+        android:typeface="normal"
+        app:backgroundTint="@color/base_dark"
+        app:layout_constraintEnd_toEndOf="@+id/ed_desription"
+        app:layout_constraintStart_toStartOf="@+id/ed_desription"
+        app:layout_constraintTop_toBottomOf="@+id/ed_desription" />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:orientation="vertical"
+        android:padding="24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.842"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:fontFamily="@font/activist"
+            android:text="Загрузка новых событий"
+            android:textColor="@color/base_dark"
+            android:textSize="30dp" />
+
+        <Button
+            android:id="@+id/btn_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/activist"
+            android:text="Управление"
+            android:textSize="20sp"
+            app:backgroundTint="@color/base_dark"
+            app:icon="@drawable/calendar_edit"
+            app:iconPadding="16dp" />
+    </LinearLayout>
+
+    <ImageView
+        android:minWidth="100pt"
+        android:maxWidth="300pt"
+        android:id="@+id/img_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/corners"
+        app:layout_constraintBottom_toTopOf="@+id/btn_add"
+        app:layout_constraintEnd_toEndOf="@+id/btn_load_img"
+        app:layout_constraintStart_toStartOf="@+id/btn_load_img"
+        app:layout_constraintTop_toBottomOf="@+id/btn_load_img"
+        app:srcCompat="@drawable/no_image"
+        tools:srcCompat="@drawable/no_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
