--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -2,7 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners android:radius="16dp"/>
+            <solid android:color="@color/base_dark"/>
+            <corners android:radius="50pt"/>
         </shape>
     </item>
 </selector>
