--- a/app/src/main/res/drawable/dialog_bg.xml
+++ b/app/src/main/res/drawable/dialog_bg.xml
@@ -2,7 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners android:radius="16dp"/>
+            <solid android:color="@color/white"/>
+            <corners android:radius="36dp"/>
         </shape>
     </item>
 </selector>
