--- a/app/src/main/res/layout/activity_edit_date.xml
+++ b/app/src/main/res/layout/activity_edit_date.xml
@@ -8,18 +8,76 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/btnReturnBack"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
+            android:background="@drawable/btn_bg"
+            android:contentDescription="back"
+            android:padding="24dp"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/return_back"
+            app:tint="@color/white" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="right|center_vertical"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:fontFamily="@font/activist"
+                android:gravity="center"
+                android:text="Редактирование даты"
+                android:textColor="@color/base_dark"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:layout_weight="2"
+            android:fontFamily="@font/activist"
+            android:gravity="center"
+            android:text="Удалить дату"
+            android:textSize="20sp"
+            app:backgroundTint="@color/base_red" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="32dp"
         android:orientation="horizontal"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         <EditText
             android:id="@+id/edDay"
@@ -109,20 +167,12 @@
         android:paddingTop="24dp"
         android:paddingRight="32dp"
         android:paddingBottom="24dp"
-        android:text="Добавить дату"
+        android:text="Изменить дату"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="250dp"
-        android:layout_height="150dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img" />
 
     <EditText
         android:id="@+id/ed_desription"
@@ -166,42 +216,6 @@
         app:layout_constraintStart_toStartOf="@+id/ed_desription"
         app:layout_constraintTop_toBottomOf="@+id/ed_desription" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:orientation="vertical"
-        android:padding="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:fontFamily="@font/activist"
-            android:text="Загрузка новых событий"
-            android:textColor="@color/base_dark"
-            android:textSize="30dp" />
-
-        <Button
-            android:id="@+id/btn_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/activist"
-            android:text="Управление"
-            android:textSize="20sp"
-            app:backgroundTint="@color/base_dark"
-            app:icon="@drawable/calendar_edit"
-            app:iconPadding="16dp" />
-    </LinearLayout>
-
     <ImageView
         android:minWidth="100pt"
         android:maxWidth="300pt"
@@ -217,38 +231,5 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_load_img"
         app:srcCompat="@drawable/no_image"
         tools:srcCompat="@drawable/no_image" />
-
-    <LinearLayout
-        android:id="@+id/linearConnection"
-        android:layout_width="798dp"
-        android:layout_height="62dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
-
-        <TextView
-            android:id="@+id/tvConnectionStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:fontFamily="@font/brutal"
-            android:gravity="center"
-            android:text="Подключение..."
-            android:textColor="@color/base_dark"
-            android:textSize="16sp" />
-
-        <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:id="@+id/pbConnectionCheck"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
-            app:indicatorColor="@color/base_dark"
-            app:trackCornerRadius="50pt"
-            app:trackThickness="16dp" />
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
