--- a/app/src/main/res/layout/activity_edit_date.xml
+++ b/app/src/main/res/layout/activity_edit_date.xml
@@ -90,7 +90,7 @@
             android:ems="10"
             android:fontFamily="@font/brutal"
             android:gravity="center"
-            android:hint="Дата"
+            android:hint="Число"
             android:inputType="numberSigned"
             android:maxLength="2"
             android:maxLines="1"
@@ -224,7 +224,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/corners"
         android:maxWidth="300pt"
-        android:minWidth="100pt"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/btn_add"
         app:layout_constraintEnd_toEndOf="@+id/btn_load_img"
         app:layout_constraintStart_toStartOf="@+id/btn_load_img"
