--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -76,7 +76,7 @@
             android:ems="10"
             android:fontFamily="@font/brutal"
             android:gravity="center"
-            android:hint="Дата"
+            android:hint="Число"
             android:inputType="numberSigned"
             android:maxLength="2"
             android:maxLines="1"
