--- a/app/src/main/res/layout/date_item.xml
+++ b/app/src/main/res/layout/date_item.xml
@@ -33,8 +33,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/no_image_placer"
-                tools:srcCompat="@drawable/no_image_placer" />
+                app:srcCompat="@drawable/no_image"
+                tools:srcCompat="@drawable/no_image" />
 
             <TextView
                 android:id="@+id/tvEditDate"
