--- a/app/src/main/res/layout/activity_edit_date.xml
+++ b/app/src/main/res/layout/activity_edit_date.xml
@@ -229,7 +229,7 @@
         app:layout_constraintEnd_toEndOf="@+id/btn_load_img"
         app:layout_constraintStart_toStartOf="@+id/btn_load_img"
         app:layout_constraintTop_toBottomOf="@+id/btn_load_img"
-        app:srcCompat="@drawable/no_image_placer"
-        tools:srcCompat="@drawable/no_image_placer" />
+        app:srcCompat="@drawable/no_image"
+        tools:srcCompat="@drawable/no_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
